# ColorifixTechnicalTask

./: README  README.md  app1.py  app2.py  pyproject.toml  test.py
