[tool.poetry]
name = "colorifixtechnicaltask"
version = "0.1.0"
description = ""
authors = ["Ebrahim Jahanshiri <e.jahanshiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dash = "^2.14.1"
pandas = "^2.1.2"
dash-bootstrap-components = "^1.5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
